--- a/mobile/mobile-Info.plist
+++ b/mobile/mobile-Info.plist
@@ -9,7 +9,7 @@
 	<key>CFBundleExecutable</key>
 	<string>${EXECUTABLE_NAME}</string>
 	<key>CFBundleIdentifier</key>
-	<string>teenah.app.${PRODUCT_NAME:rfc1034identifier}</string>
+	<string>teenah-app.mobile</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
